[project]
name = "ai-footprints-mcp"
version = "1.0.0"
description = "AI 足迹 MCP Server — 让 AI Agent 管理用户的数字足迹"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ai-footprints-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
