[project]
name = "url-manager-mcp"
version = "1.0.0"
description = "URL Manager MCP Server — Agent-first web link collection & knowledge management"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
url-manager-mcp = "server:main"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
